openshift/kustomize/postgres/crunchy/base/network.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: crunchy
  namespace: default
  labels:
    name: crunchy
    part-of: tno
    version: 1.0.0
    component: postgres
    managed-by: kustomize
    created-by: jeremy.foster
    postgres-operator.crunchydata.com/cluster: crunchy
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: crunchy
  ingress:
    - from:
        - podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: crunchy
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8008
        - protocol: TCP
          port: 2022

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: crunchy-monitoring
  namespace: default
  labels:
    name: crunchy
    part-of: tno
    version: 1.0.0
    component: postgres
    managed-by: kustomize
    created-by: jeremy.foster
    postgres-operator.crunchydata.com/cluster: crunchy
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: crunchy
  ingress:
    - from:
        - namespaceSelector:
            name: 9b301c
            environment: tools
      ports:
        - protocol: TCP
          port: 9187
